res/examples/invalid/return_stmt_in_function_expr_type_mismatch.eg
(a: number, b: number): number => { 
    return "";
};

// out: TypeError: mismatched types: expected type `number` but received `string`